# zero-shot-vocab-expansion

./: .flake8  .gitignore  README.md  setup.cfg
sample-notebooks/: training.ipynb
src/zero_shot_vocab_expansion/: __init__.py  embedding_model.py  evaluation.py
src/zero_shot_vocab_expansion/dataset/: __init__.py  dataset.py  utils.py
src/zero_shot_vocab_expansion/dataset/test/: test_dataset.py  test_utils.py
src/zero_shot_vocab_expansion/test/: test_embedding_model.py  test_evaluation.py
src/zero_shot_vocab_expansion/vocab_expansion/: __init__.py  expand_vocabulary.py  initializers.py
src/zero_shot_vocab_expansion/vocab_expansion/test/: test_expand_vocabulary.py  test_initializers.py
