# This example contains just the necessary options for a src-layout, set up
# the rest of the file as described above.

[metadata]
name = zero_shot_vocab_expansion
version = 0.1.0
author = Terry Slenn
author_email = terry.slenn@gmail.com
description = Zero-shot token embeddings for new vocabulary
long_description = This repository creates token embeddings for new vocabulary based on English dictionary definitions or user supplied definitions.

[options]
package_dir =
    = src
packages = find:
install_requires =
    flake8
    pytest
    torch
    transformers
    sentence-transformers

[options.packages.find]
where=src
